# illinois-report-card-api

./: .dockerignore  .gitignore  .railwayignore  CLAUDE.md  Dockerfile  LICENSE  PHASE_PROGRESS.md  PROJECT.md  README.md  app_spec.txt  claude-progress.txt  coding_prompt.md  create_test_key.py  docker-compose.yml  feature_list.json  init.sh  initializer_prompt.md  pyproject.toml  verification_test.py  verify_existing.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/api/: __init__.py  admin.py  districts.py  health.py  query.py  schema.py  schools.py  search.py  state.py  years.py
app/cli/: __init__.py  __main__.py  import_data.py
app/middleware/: __init__.py  logging.py
app/models/: __init__.py  database.py  errors.py
app/services/: __init__.py  fts5.py  table_manager.py
app/utils/: __init__.py  data_cleaners.py  excel_parser.py  schema_detector.py
docs/: query-guide.md  use-case-analysis-chris-dennis.md
tests/: __init__.py  conftest.py  test_database.py
tests/test_api/: __init__.py  test_admin.py  test_auth.py  test_districts.py  test_health.py  test_query.py  test_rate_limiting.py  test_response_format.py  test_schema.py  test_schools.py  test_search.py  test_state.py  test_years.py
tests/test_cli/: conftest.py  test_import_data.py
tests/test_integration/: __init__.py  test_cli_import.py  test_schema_detection.py  test_year_partitioned_tables.py
tests/test_real_data/: conftest.py  test_real_data.py
tests/test_services/: __init__.py  test_fts5.py  test_table_manager.py
tests/test_utils/: __init__.py  (+3 more)
